<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvCreateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/create_account"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/new_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#263238"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#263238"
        tools:ignore="VisualLintTextFieldSize" />

    <CheckBox
        android:id="@+id/cbIsAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_as_admin" />

    <Button
        android:id="@+id/btnSubmitCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/btnBackFromCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/back" />
</LinearLayout>