<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_new_challenge1"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etChallengeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/title"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textColorHint="#263238"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etChallengeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#263238"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etChallengeDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/duration_days"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#263238"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnSaveChallenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnCancelChallenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cancel" />
</LinearLayout>